Adjust nav li spacing to fix minor bp issue.

--- a/css/layout/_nav.scss
+++ b/css/layout/_nav.scss
@@ -179,7 +179,7 @@ Navbar
       background-color: none;
       overflow: visible;
       width: auto; 
-      padding-right: 2.7%;
+      padding-right: 2.5%;
     }
     .flexnav li:last-child {
       padding-right: 0;
